// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Identity helper produces Identity 1`] = `
Object {
  "did": Object {
    "@context": Array [
      "https://w3id.org/did/v1",
      "https://w3id.org/security/v2",
    ],
    "assertionMethod": Array [
      Any<String>,
    ],
    "authentication": Array [
      Any<String>,
    ],
    "capabilityDelegation": Array [
      Any<String>,
    ],
    "capabilityInvocation": Array [
      Any<String>,
    ],
    "id": Any<String>,
    "keyAgreement": Array [
      Any<String>,
    ],
    "proof": Object {
      "created": Any<String>,
      "jws": Any<String>,
      "proofPurpose": "verificationMethod",
      "type": "EcdsaSecp256k1Signature2019",
      "verificationMethod": Any<String>,
    },
    "verificationMethod": Array [
      Object {
        "controller": Any<String>,
        "id": Any<String>,
        "nonce": "gTPXUCqZfmQ:FnYKpseBqQfspZfeiXW4NywdWjAf5P3zgjYj5aRBbiLE",
        "publicKeyBase58": "23CpAMP7xNb2BdToHuKexie2D2itn2tWtCeK8XzKvRPn6",
        "type": "EcdsaSecp256k1VerificationKey2019",
      },
    ],
  },
  "identity": Object {
    "@context": Array [
      "https://www.w3.org/2018/credentials/v1",
      Object {
        "@version": 1.1,
        "data": Object {
          "@context": Object {
            "@version": 1.1,
            "scmdata": "https://example.org/identity/data#",
          },
          "@id": "scmdata:id",
          "@type": "scmdata:type",
        },
        "firstname": Object {
          "@id": "scm:firstname",
          "@type": "xsd:string",
        },
        "lastname": Object {
          "@id": "scm:lastname",
          "@type": "xsd:string",
        },
        "scm": "https://example.org/identity#",
        "xsd": "http://www.w3.org/2001/XMLSchema#",
      },
    ],
    "credentialSubject": Object {
      "data": Object {
        "@type": "TestUtilIdentity",
        "firstname": "alice",
        "lastname": "Lastname",
      },
    },
    "holder": Object {
      "id": Any<String>,
    },
    "id": Any<String>,
    "issuanceDate": Any<String>,
    "issuer": Any<String>,
    "proof": Object {
      "created": Any<String>,
      "jws": Any<String>,
      "proofPurpose": "assertionMethod",
      "type": "EcdsaSecp256k1Signature2019",
      "verificationMethod": Any<String>,
    },
    "type": Array [
      "VerifiableCredential",
      "TestUtilIdentity",
    ],
  },
}
`;

exports[`Identity helper produces Identity 2`] = `
Object {
  "did": Object {
    "@context": Array [
      "https://w3id.org/did/v1",
      "https://w3id.org/security/v2",
    ],
    "assertionMethod": Array [
      Any<String>,
    ],
    "authentication": Array [
      Any<String>,
    ],
    "capabilityDelegation": Array [
      Any<String>,
    ],
    "capabilityInvocation": Array [
      Any<String>,
    ],
    "id": Any<String>,
    "keyAgreement": Array [
      Any<String>,
    ],
    "proof": Object {
      "created": Any<String>,
      "jws": Any<String>,
      "proofPurpose": "verificationMethod",
      "type": "EcdsaSecp256k1Signature2019",
      "verificationMethod": Any<String>,
    },
    "verificationMethod": Array [
      Object {
        "controller": Any<String>,
        "id": Any<String>,
        "nonce": "JdUsXojfkzs:6byJEC5CuxJT5xD3fxe8jgsUTYPR37RzRwaAE9C76HFc",
        "publicKeyBase58": "iSL1y5v2Pk6qnHo1WrxpKWjFDi2NTVEhju3MtqY12imp",
        "type": "EcdsaSecp256k1VerificationKey2019",
      },
    ],
  },
  "identity": Object {
    "@context": Array [
      "https://www.w3.org/2018/credentials/v1",
      Object {
        "@version": 1.1,
        "data": Object {
          "@context": Object {
            "@version": 1.1,
            "scmdata": "https://example.org/identity/data#",
          },
          "@id": "scmdata:id",
          "@type": "scmdata:type",
        },
        "firstname": Object {
          "@id": "scm:firstname",
          "@type": "xsd:string",
        },
        "lastname": Object {
          "@id": "scm:lastname",
          "@type": "xsd:string",
        },
        "scm": "https://example.org/identity#",
        "xsd": "http://www.w3.org/2001/XMLSchema#",
      },
    ],
    "credentialSubject": Object {
      "data": Object {
        "@type": "TestUtilIdentity",
        "firstname": "bob",
        "lastname": "Lastname",
      },
    },
    "holder": Object {
      "id": Any<String>,
    },
    "id": Any<String>,
    "issuanceDate": Any<String>,
    "issuer": Any<String>,
    "proof": Object {
      "created": Any<String>,
      "jws": Any<String>,
      "proofPurpose": "assertionMethod",
      "type": "EcdsaSecp256k1Signature2019",
      "verificationMethod": Any<String>,
    },
    "type": Array [
      "VerifiableCredential",
      "TestUtilIdentity",
    ],
  },
}
`;

exports[`Identity helper provides Identity 1`] = `
Object {
  "@context": Array [
    "https://www.w3.org/2018/credentials/v1",
  ],
  "holder": Object {
    "id": Any<String>,
  },
  "id": Any<String>,
  "proof": Object {
    "challenge": Any<String>,
    "created": Any<String>,
    "domain": Any<String>,
    "jws": Any<String>,
    "proofPurpose": "authentication",
    "type": "EcdsaSecp256k1Signature2019",
    "verificationMethod": Any<String>,
  },
  "type": Array [
    "VerifiablePresentation",
    "CredentialResponse",
  ],
  "verifiableCredential": Array [
    Object {
      "@context": Array [
        "https://www.w3.org/2018/credentials/v1",
        Object {
          "@version": 1.1,
          "data": Object {
            "@context": Object {
              "@version": 1.1,
              "scmdata": "https://example.org/entity/idnetity/data#",
            },
            "@id": "scmdata:id",
            "@type": "scmdata:type",
          },
          "did": Object {
            "@id": "scm:did",
            "@type": "@json",
          },
          "identity": Object {
            "@id": "scm:identity",
            "@type": "@json",
          },
          "scm": "https://example.org/entity/idnetity#",
        },
      ],
      "credentialSubject": Object {
        "data": Object {
          "@type": "EntityIdentity",
          "identity": Object {
            "@context": Array [
              "https://www.w3.org/2018/credentials/v1",
              Object {
                "@version": 1.1,
                "data": Object {
                  "@context": Object {
                    "@version": 1.1,
                    "scmdata": "https://example.org/identity/data#",
                  },
                  "@id": "scmdata:id",
                  "@type": "scmdata:type",
                },
                "firstname": Object {
                  "@id": "scm:firstname",
                  "@type": "xsd:string",
                },
                "lastname": Object {
                  "@id": "scm:lastname",
                  "@type": "xsd:string",
                },
                "scm": "https://example.org/identity#",
                "xsd": "http://www.w3.org/2001/XMLSchema#",
              },
            ],
            "credentialSubject": Object {
              "data": Object {
                "@type": "TestUtilIdentity",
                "firstname": "bob",
                "lastname": "Lastname",
              },
            },
            "holder": Object {
              "id": Any<String>,
            },
            "id": Any<String>,
            "issuanceDate": Any<String>,
            "issuer": Any<String>,
            "proof": Object {
              "created": Any<String>,
              "jws": Any<String>,
              "proofPurpose": "assertionMethod",
              "type": "EcdsaSecp256k1Signature2019",
              "verificationMethod": Any<String>,
            },
            "type": Array [
              "VerifiableCredential",
              "TestUtilIdentity",
            ],
          },
        },
        "did": Object {
          "@context": Array [
            "https://w3id.org/did/v1",
            "https://w3id.org/security/v2",
          ],
          "assertionMethod": Array [
            Any<String>,
          ],
          "authentication": Array [
            Any<String>,
          ],
          "capabilityDelegation": Array [
            Any<String>,
          ],
          "capabilityInvocation": Array [
            Any<String>,
          ],
          "id": Any<String>,
          "keyAgreement": Array [
            Any<String>,
          ],
          "proof": Object {
            "created": Any<String>,
            "jws": Any<String>,
            "proofPurpose": "verificationMethod",
            "type": "EcdsaSecp256k1Signature2019",
            "verificationMethod": Any<String>,
          },
          "verificationMethod": Array [
            Object {
              "controller": Any<String>,
              "id": Any<String>,
              "nonce": "JdUsXojfkzs:6byJEC5CuxJT5xD3fxe8jgsUTYPR37RzRwaAE9C76HFc",
              "publicKeyBase58": "iSL1y5v2Pk6qnHo1WrxpKWjFDi2NTVEhju3MtqY12imp",
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
        },
      },
      "holder": Object {
        "id": Any<String>,
      },
      "id": Any<String>,
      "issuanceDate": Any<String>,
      "issuer": Any<String>,
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "assertionMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "type": Array [
        "VerifiableCredential",
        "EntityIdentity",
      ],
    },
  ],
}
`;

exports[`Identity helper requests Identity 1`] = `
Object {
  "@context": Array [
    "https://www.w3.org/2018/credentials/v1",
  ],
  "holder": Object {
    "id": Any<String>,
  },
  "id": Any<String>,
  "proof": Object {
    "challenge": Any<String>,
    "created": Any<String>,
    "domain": Any<String>,
    "jws": Any<String>,
    "proofPurpose": "authentication",
    "type": "EcdsaSecp256k1Signature2019",
    "verificationMethod": Any<String>,
  },
  "type": Array [
    "VerifiablePresentation",
    "CredentialRequest",
  ],
  "verifiableCredential": Array [
    Object {
      "@context": Array [
        "https://www.w3.org/2018/credentials/v1",
        Object {
          "@version": 1.1,
          "data": Object {
            "@context": Object {
              "@version": 1.1,
              "scmdata": "https://example.org/entity/idnetity/data#",
            },
            "@id": "scmdata:id",
            "@type": "scmdata:type",
          },
          "did": Object {
            "@id": "scm:did",
            "@type": "@json",
          },
          "identity": Object {
            "@id": "scm:identity",
            "@type": "@json",
          },
          "scm": "https://example.org/entity/idnetity#",
        },
      ],
      "credentialSubject": Object {
        "data": Object {
          "@type": "EntityIdentity",
          "identity": Object {
            "@context": Array [
              "https://www.w3.org/2018/credentials/v1",
              Object {
                "@version": 1.1,
                "data": Object {
                  "@context": Object {
                    "@version": 1.1,
                    "scmdata": "https://example.org/identity/data#",
                  },
                  "@id": "scmdata:id",
                  "@type": "scmdata:type",
                },
                "firstname": Object {
                  "@id": "scm:firstname",
                  "@type": "xsd:string",
                },
                "lastname": Object {
                  "@id": "scm:lastname",
                  "@type": "xsd:string",
                },
                "scm": "https://example.org/identity#",
                "xsd": "http://www.w3.org/2001/XMLSchema#",
              },
            ],
            "credentialSubject": Object {
              "data": Object {
                "@type": "TestUtilIdentity",
                "firstname": "alice",
                "lastname": "Lastname",
              },
            },
            "holder": Object {
              "id": Any<String>,
            },
            "id": Any<String>,
            "issuanceDate": Any<String>,
            "issuer": Any<String>,
            "proof": Object {
              "created": Any<String>,
              "jws": Any<String>,
              "proofPurpose": "assertionMethod",
              "type": "EcdsaSecp256k1Signature2019",
              "verificationMethod": Any<String>,
            },
            "type": Array [
              "VerifiableCredential",
              "TestUtilIdentity",
            ],
          },
        },
        "did": Object {
          "@context": Array [
            "https://w3id.org/did/v1",
            "https://w3id.org/security/v2",
          ],
          "assertionMethod": Array [
            Any<String>,
          ],
          "authentication": Array [
            Any<String>,
          ],
          "capabilityDelegation": Array [
            Any<String>,
          ],
          "capabilityInvocation": Array [
            Any<String>,
          ],
          "id": Any<String>,
          "keyAgreement": Array [
            Any<String>,
          ],
          "proof": Object {
            "created": Any<String>,
            "jws": Any<String>,
            "proofPurpose": "verificationMethod",
            "type": "EcdsaSecp256k1Signature2019",
            "verificationMethod": Any<String>,
          },
          "verificationMethod": Array [
            Object {
              "controller": Any<String>,
              "id": Any<String>,
              "nonce": "gTPXUCqZfmQ:FnYKpseBqQfspZfeiXW4NywdWjAf5P3zgjYj5aRBbiLE",
              "publicKeyBase58": "23CpAMP7xNb2BdToHuKexie2D2itn2tWtCeK8XzKvRPn6",
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
        },
      },
      "holder": Object {
        "id": Any<String>,
      },
      "id": Any<String>,
      "issuanceDate": Any<String>,
      "issuer": Any<String>,
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "assertionMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "type": Array [
        "VerifiableCredential",
        "EntityIdentity",
      ],
    },
  ],
}
`;

exports[`Identity helper verifies provided Identity 1`] = `
Object {
  "@context": Array [
    "https://www.w3.org/2018/credentials/v1",
    Object {
      "@version": 1.1,
      "data": Object {
        "@context": Object {
          "@version": 1.1,
          "scmdata": "https://example.org/entity/idnetity/data#",
        },
        "@id": "scmdata:id",
        "@type": "scmdata:type",
      },
      "did": Object {
        "@id": "scm:did",
        "@type": "@json",
      },
      "identity": Object {
        "@id": "scm:identity",
        "@type": "@json",
      },
      "scm": "https://example.org/entity/idnetity#",
    },
  ],
  "credentialSubject": Object {
    "data": Object {
      "@type": "EntityIdentity",
      "identity": Object {
        "@context": Array [
          "https://www.w3.org/2018/credentials/v1",
          Object {
            "@version": 1.1,
            "data": Object {
              "@context": Object {
                "@version": 1.1,
                "scmdata": "https://example.org/identity/data#",
              },
              "@id": "scmdata:id",
              "@type": "scmdata:type",
            },
            "firstname": Object {
              "@id": "scm:firstname",
              "@type": "xsd:string",
            },
            "lastname": Object {
              "@id": "scm:lastname",
              "@type": "xsd:string",
            },
            "scm": "https://example.org/identity#",
            "xsd": "http://www.w3.org/2001/XMLSchema#",
          },
        ],
        "credentialSubject": Object {
          "data": Object {
            "@type": "TestUtilIdentity",
            "firstname": "bob",
            "lastname": "Lastname",
          },
        },
        "holder": Object {
          "id": Any<String>,
        },
        "id": Any<String>,
        "issuanceDate": Any<String>,
        "issuer": Any<String>,
        "proof": Object {
          "created": Any<String>,
          "jws": Any<String>,
          "proofPurpose": "assertionMethod",
          "type": "EcdsaSecp256k1Signature2019",
          "verificationMethod": Any<String>,
        },
        "type": Array [
          "VerifiableCredential",
          "TestUtilIdentity",
        ],
      },
    },
    "did": Object {
      "@context": Array [
        "https://w3id.org/did/v1",
        "https://w3id.org/security/v2",
      ],
      "assertionMethod": Array [
        Any<String>,
      ],
      "authentication": Array [
        Any<String>,
      ],
      "capabilityDelegation": Array [
        Any<String>,
      ],
      "capabilityInvocation": Array [
        Any<String>,
      ],
      "id": Any<String>,
      "keyAgreement": Array [
        Any<String>,
      ],
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "verificationMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "verificationMethod": Array [
        Object {
          "controller": Any<String>,
          "id": Any<String>,
          "nonce": "JdUsXojfkzs:6byJEC5CuxJT5xD3fxe8jgsUTYPR37RzRwaAE9C76HFc",
          "publicKeyBase58": "iSL1y5v2Pk6qnHo1WrxpKWjFDi2NTVEhju3MtqY12imp",
          "type": "EcdsaSecp256k1VerificationKey2019",
        },
      ],
    },
  },
  "holder": Object {
    "id": Any<String>,
  },
  "id": Any<String>,
  "issuanceDate": Any<String>,
  "issuer": Any<String>,
  "proof": Object {
    "created": Any<String>,
    "jws": Any<String>,
    "proofPurpose": "assertionMethod",
    "type": "EcdsaSecp256k1Signature2019",
    "verificationMethod": Any<String>,
  },
  "type": Array [
    "VerifiableCredential",
    "EntityIdentity",
  ],
}
`;
